fix scrollbar horizontal height

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,6 +59,7 @@ input[type=number]::-webkit-outer-spin-button {
 /* width */
 ::-webkit-scrollbar {
   width: 14px;
+  height: 14px;
 }
 
 /* Track */
